--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,76 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.container {
+  width: 80%;
+  height: 400px;
+  background-color: #928f8c;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box {
+  width: 200px;
+  height: 200px;
+  background: #686dff;
+  border-radius: 5px;
+  border: 2px solid;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 15px;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+
+.display {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  border-radius: 5px;
+  border: 2px solid;
+  background: #ffdf00;
+  margin-bottom: 15px;
+  height: 80px;
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.counterBlock .display {
+
+}
+
+.filter-red {
+  color: red;
+  font-weight: bold;
+}
+
+.input-red {
+  background-color: lightcoral;
+}
+
+.controlPanel {
+  padding: 15px;
+  border-radius: 5px;
+  border: 2px solid;
+  display: flex;
+  justify-content: space-around;
+}
+
+.containerValue {
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.containerValue input {
+  border-radius: 3px;
+  width: 50%;
+  text-align: center;
+  font-weight: 700;
+  font-size: 1em;
+}
+
+.numb {
+  font-size: 40px;
 }
